[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
]

[project]
name = "arkupk"
version = "0.1.0"
description = ""
authors = [
    {name = "djkcyl", email = "cyl@cyllive.cn"},
]
dependencies = [
    "noneprompt>=0.1.7",
    "httpx>=0.23.3",
    "click>=8.1.3",
    "tqdm>=4.64.1",
    "pydantic>=1.10.4",
    "unitypack @ git+https://github.com/HearthSim/UnityPack",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL3"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
arkupk = "arkupk.__main__:main"

[tool.black]
line-length = 96